<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/construction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdbdb"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_activity_security"
        android:textColor="@color/blue_low"
        android:textSize="20sp" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_name" />

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_id" />

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_address" />

           &lt;!&ndash; <TextView
                style="@style/table_content"
                android:text="@string/table_construction_tel" />&ndash;&gt;

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_area" />

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_type" />

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_manager" />

            <TextView
                style="@style/table_content"
                android:text="@string/table_construction_user" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/construction_name"
                style="@style/table_content"
                android:text="工程信息" />

            <TextView
                android:id="@+id/construction_id"
                style="@style/table_content"
                android:text="工程信息" />

            <TextView
                android:id="@+id/construction_address"
                style="@style/table_content"
                android:text="工程信息" />

           &lt;!&ndash; <TextView
                android:id="@+id/construction_tel"
                style="@style/table_content"
                android:text="工程信息" />&ndash;&gt;

            <TextView
                android:id="@+id/construction_area"
                style="@style/table_content"
                android:text="工程信息" />

            <TextView
                android:id="@+id/construction_type"
                style="@style/table_content"
                android:text="工程信息" />

            <TextView
                android:id="@+id/construction_manager"
                style="@style/table_content"
                android:text="工程信息" />

            <TextView
                android:id="@+id/construction_user"
                style="@style/table_content"
                android:text="工程信息" />
        </LinearLayout>
    </LinearLayout>-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_name" />

            <TextView
                android:id="@+id/construction_name"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="工程信息" />


        </TableRow>

        <TableRow>

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_id" />

            <TextView
                android:id="@+id/construction_id"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_address" />

            <TextView
                android:id="@+id/construction_address"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_area" />

            <TextView
                android:id="@+id/construction_area"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_type" />

            <TextView
                android:id="@+id/construction_type"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow android:visibility="gone">

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_manager" />

            <TextView
                android:id="@+id/construction_manager"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow android:visibility="gone">

            <TextView
                style="@style/table_content"
                android:layout_weight="1"
                android:text="@string/table_construction_user" />

            <TextView
                android:id="@+id/construction_user"
                style="@style/table_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdbdb"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_detail"
            style="@style/button_layout"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="详情查看" />
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <Button
            android:id="@+id/btn_check"
            style="@style/button_layout"
            android:layout_gravity="end"
            android:background="@color/blue_low"
            android:textColor="@color/white"
            android:text="@string/btn_check" />
    </LinearLayout>

</LinearLayout>