<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:dots="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:hint="@string/prompt_username"
            android:maxLength="12"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--<CheckBox
                android:id="@+id/logining_pass_vis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="显示密码"
                android:textColor="@color/colorLogin" />-->

            <CheckBox
                android:id="@+id/login_pass_remb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textColor="@color/colorLogin" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/login_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#7f92c6"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/colorLogin"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/logining_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/action_logining"
                android:textColor="@color/colorLogin"
                android:textSize="20sp" />

            <pl.tajchert.waitingdots.DotsTextView
                android:id="@+id/dots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorLogin"
                android:textSize="45sp"
                dots:autoplay="true"
                dots:period="1000" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/shift_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/colorNone"
                android:text="@string/action_change_user"
                android:textColor="#8a8a8a" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>