<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdbdb"
        android:gravity="center"
        android:padding="10dp"
        android:text="安全检查"
        android:textSize="18sp" />

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_name" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_name"
            style="@style/table_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_id" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_address" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_tel" />-->

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_area" />

        <View style="@style/empty_view"></View>

        <!--<TextView
            android:id="@+id/construction_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_construction_tel" />-->
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_type" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_manager" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_manager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_user" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdbdb"
        android:orientation="horizontal">

        <Button
            style="@style/button_layout"
            android:layout_gravity="center"
            android:background="#F2F2F2"
            android:text="预览" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#898383" />

        <Button
            style="@style/button_layout"
            android:layout_gravity="end"
            android:background="#dcdbdb"
            android:text="检查" />
    </LinearLayout>

</LinearLayout>