<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout_search"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:id="@+id/clearSearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="12dp"
                    android:src="@drawable/up_jt" />

                <EditText
                    android:id="@+id/edit_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="8dp"
                    android:paddingStart="12dp" />

                <ImageView
                    android:id="@+id/image_search_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="12dp"
                    android:src="@mipmap/ic_search" />
            </LinearLayout>

            <View
                android:id="@+id/line_divider"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_below="@+id/linearLayout_search"
                android:background="#eee" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_divider"
                android:divider="@color/white"
                android:dividerHeight="1dp"
                android:visibility="visible" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_search"
        android:background="#F8F8FF"
        android:visibility="gone">

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            app:mk_color="@color/colorPrimary"
            app:mk_type="Whirlpool" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_search"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_no_result"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_sea_local"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@+id/error_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="查询本地"
            android:textColor="@color/white" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_search"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/blue_low"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/search_result_local"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
                android:id="@+id/listContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
